Fix day 03 deprecated Character() constructor